Implement cloning of a TextShape

The shape itself is cloned correctly now. But it is still not
saved correctly into SVG. It looks like QSvgGenerator writes wrong
font height for some reason.

At least there are no crashes atm

BUG:389271